--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">proposal</string>
+    <string name="button">button</string>
+    <string name="forward">-&gt;</string>
+    <string name="back">&lt;-</string>
 </resources>
